fixed uv index padding issue on mobile again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,6 @@ p {
     padding: .5rem 1rem;
   }
   p {
-    margin-bottom: 12px;
+    margin-bottom: 8px;
   }
 } 
